# gl_helloworld

./: .gitignore  CMakeLists.txt  README.md
3d/hello3d/lib/iniparser/: CMakeLists.txt
3d/hello3d/src/: helloworld.c
3d_sample/: CMakeLists.txt  OpenGL_Win32_Sample.cpp
3d_sample/src/: CMakeLists.txt  helloworld.c.bak  tmp
lib/: CMakeLists.txt
src/: helloworld.c
